--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 =========================================== -->
 
 
-        <section class="section-big" id="presentation">
+        <!-- <section class="section-big" id="presentation">
             <article>
                 <header class="section-header pal">
                     <i class="fas fa-glasses section-picto"></i>
@@ -147,7 +147,7 @@
 
                 </div>
             </article>
-        </section>
+        </section> -->
 
 
         <!--==========================================
@@ -192,14 +192,14 @@
                         <div class="competences-logos img-mysql">
                             <p class="img-text">My Sql</p>
                         </div>
-                        <div class="competences-logos img-symfony">
-                            <p class="img-text">Symfony</p>
-                        </div>
                         <div class="competences-logos img-php">
                             <p class="img-text">PHP</p>
                         </div>
-                        <div class="competences-logos img-jquery">
-                            <p class="img-text">jQuery</p>
+                        <div class="competences-logos img-node">
+                            <p class="img-text">Symfony</p>
+                        </div>
+                        <div class="competences-logos img-angular">
+                            <p class="img-text">Angular 8</p>
                         </div>
                         <div class="competences-logos img-js">
                             <p class="img-text">Javascript</p>
@@ -238,6 +238,27 @@
 
 
                 <div class="pal">
+
+                    <section class="wrapper-articles mbs">
+
+                        <p class="carre-dates">
+                            05-09
+                            <time>2018</time>
+                        </p>
+
+
+                        <section>
+                            <h4>Stage développement Angular 8 chez <strong>Eureka Solutions</strong> à Pfastatt</h4>
+                            
+                            <ul>
+                                <li>Développement d'une web application de gestion de tournée transporteurs</li>
+                                <li>Utilisation de <a href="https://leafletjs.com/">Leaflet</a> pour l'aide à la planification</li>
+                                <li>Apprentissage d'Angular 8 et de Typescript</li>
+                                <li>Design</li>
+                                <li>Utilisation de NodeJS sur serveurs IBM</li>
+                            </ul>
+                        </section>
+                    </section>
 
                     <section class="wrapper-articles mbs">
 
