--- a/index.html
+++ b/index.html
@@ -195,8 +195,11 @@
                         <div class="competences-logos img-php">
                             <p class="img-text">PHP</p>
                         </div>
+                        <div class="competences-logos img-git">
+                            <p class="img-text">Git</p>
+                        </div>
                         <div class="competences-logos img-node">
-                            <p class="img-text">Symfony</p>
+                            <p class="img-text">Node.js</p>
                         </div>
                         <div class="competences-logos img-angular">
                             <p class="img-text">Angular 8</p>
@@ -242,20 +245,21 @@
                     <section class="wrapper-articles mbs">
 
                         <p class="carre-dates">
-                            05-09
-                            <time>2018</time>
+                            <time>2019</time>
                         </p>
 
 
                         <section>
-                            <h4>Stage développement Angular 8 chez <strong>Eureka Solutions</strong> à Pfastatt</h4>
+                            <h4>Développeur Angular chez <strong>Eureka Solutions</strong> à Pfastatt</h4>
                             
                             <ul>
-                                <li>Développement d'une web application de gestion de tournée transporteurs</li>
-                                <li>Utilisation de <a href="https://leafletjs.com/">Leaflet</a> pour l'aide à la planification</li>
-                                <li>Apprentissage d'Angular 8 et de Typescript</li>
+                                <li>Création d'une web application de gestion de tournée transporteurs (Angular 8)</li>
+                                <li>Création Web application de recherche / correction d'adresse postale  (Angular 8)</li>
+                                <li>Affichage cartes et calcul d'itinéraire via<a href="https://leafletjs.com/">Leaflet</a></li>
+                                <li>Animations CSS</li>
+                                <li>Utilisation de Node.js sur serveurs IBM i</li>
+                                <li>Mise en place et documentation d'un workflow Git</li>
                                 <li>Design</li>
-                                <li>Utilisation de NodeJS sur serveurs IBM</li>
                             </ul>
                         </section>
                     </section>
@@ -315,12 +319,6 @@
                             <ul>
                                 <li>Design graphique</li>
                                 <li>Création d'imprimés tout supports<br>
-                                    <!-- <ul class="list-sublist">
-                                    <li>Papier</li>
-                                    <li>Adhésif</li>
-                                    <li>Objets</li>
-                                    <li>Bâches</li>
-                                </ul> -->
                                 </li>
                             </ul>
                             <br>
@@ -336,7 +334,7 @@
 
 
                         <section>
-                            <h4>Graphiste chez <strong>ParuVendu</strong> à Illzach</h4>
+                            <h4>Graphiste chez <strong>ParuVendu</strong> à Mulhouse</h4>
                             <ul>
                                 <li>Design graphique</li>
                                 <li>Création d’encarts publicitaires</li>
@@ -398,7 +396,6 @@
                         <div class="flex-center--left">
                             <p>Licence professionnelle : <em>Développement Web Communication & Apprentissages</em> à
                                 L'<em>université de Strasbourg</em>.<br>
-                                En cours de formation
                             </p>
                         </div>
                     </section>
