Mise en place version anglaise, site + PDF et retouches mineures de texte

--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
                 <a href="https://www.linkedin.com/in/david-klein-384720122/" title="LinkedIn" target="blank"><i
                         class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/herr-turbo" target="blank" title="Github"><i class="fab fa-github"></i></a>
-                <a href="assets/downloads/david-klein-cv.pdf" target="blank" download
-                    title="Télécharger une version pdf de mon CV (fortement moins interactive)"><i
-                        class="fas fa-file-download"></i></a>
+                <a href="assets/downloads/david-klein-cv-fr.pdf" target="blank" download
+                    title="Télécharger une version imprimable de mon CV (fortement moins interactive)">
+                    <i class="fas fa-print"></i>
+                </a>
+                <a href="./en.html" class="lang-link" title="English version">EN</a>
+
+
 
             </nav>
 
@@ -198,11 +202,11 @@
                         <div class="competences-logos img-git">
                             <p class="img-text">Git</p>
                         </div>
-                        <div class="competences-logos img-node">
-                            <p class="img-text">Node.js</p>
-                        </div>
                         <div class="competences-logos img-angular">
                             <p class="img-text">Angular 10</p>
+                        </div>
+                        <div class="competences-logos img-node">
+                            <p class="img-text">Node.js</p>
                         </div>
                         <div class="competences-logos img-js">
                             <p class="img-text">Javascript</p>
@@ -245,21 +249,31 @@
                     <section class="wrapper-articles mbs">
 
                         <p class="carre-dates">
-                            <time>2019</time>
+                            depuis<br><time>2019</time>
                         </p>
 
 
                         <section>
-                            <h4>Développeur Angular chez <strong>Eureka Solutions</strong> à Pfastatt</h4>
+                            <h4>Développeur Node.js & Angular chez <strong>Eureka Solutions</strong> à Pfastatt</h4>
                             
                             <ul>
-                                <li>Création d'une web application de gestion de tournée transporteurs (Angular 8)</li>
-                                <li>Création Web application de recherche / correction d'adresse postale  (Angular 8)</li>
-                                <li>Affichage cartes et calcul d'itinéraire via<a href="https://leafletjs.com/">Leaflet</a></li>
-                                <li>Animations CSS</li>
-                                <li>Utilisation de Node.js sur serveurs IBM i</li>
+                                <li>Création d'API Rest avec Node.js et Express.js sur serveurs IBM i</li>
+                                <li>Création de Web App Angular
+                                    <ul class="list-sublist">
+                                        <li>Gestion de tournée transporteurs</li>
+                                        <li>Interface de recherche / correction d'adresse postale</li>
+                                        <li>Affichage cartes et calcul d'itinéraire via <a href="https://leafletjs.com/">Leaflet</a></li>
+                                        <li>Gestion des notifications sur client lourd et léger</li>
+                                    </ul>
+                                </li>
+                                <li>Optimisation de la structure des projets
+                                    <ul class="list-sublist">
+                                        <li>Evolutivité, réutilisabilité, factorisation</li>
+                                    </ul>
+                                </li>
                                 <li>Mise en place et documentation d'un workflow Git</li>
                                 <li>Design</li>
+                                <li>Autoformation sur de nouvelles technologies web</li>
                             </ul>
                         </section>
                     </section>
